# PaperPandemic

./: .gitignore  README.md  contexto_proyecto.txt  crear_contexto.py  main.py  path.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
backend/: engine.py  loader.py  main.py  options.py  readme.md  sir_model.py
backend/data/: generador.py  mundo.db  poblacion.csv
controllers/: mapa_modelo.py  sird_controller.py
ui/: main.qml
ui/assets/: exprimidor.py  paises.json  paiseses.json
ui/components/: BarraInferior.qml  BarraSuperior.qml  GameOverModal.qml  Mapa.qml  MenuOpciones.qml  PieChartPopup.qml  VistaGrafica.qml  VistaNoticias.qml  VistaRanking.qml  qmldir
ui/components/utils/: Mapa.qml  qmldir
ui/themes/: ThemeManager.qml  qmldir
ui/views/: principal.qml  qmldir
